# fetch_items_w_yolo

./: Dockerfile  README.md  create_container.sh  entrypoint.sh
main_folder/: student_aa_run_tester.sh  student_aa_run_tester_client-node.sh
main_folder/fiverr_yolo/src/resit_coursework/: CMakeLists.txt  itr_cw_2425_resit  package.xml
main_folder/fiverr_yolo/src/resit_coursework/launch/: itr_AI_cw2425_resit.launch
main_folder/fiverr_yolo/src/resit_coursework/msg/: HotelRequest.msg
main_folder/fiverr_yolo/src/resit_coursework/scripts/: main_node.py
main_folder/fiverr_yolo/src/second_coursework/: CMakeLists.txt  itr_cw_2425AI  package.xml
main_folder/fiverr_yolo/src/second_coursework/action/: CreateSemanticMap.action
main_folder/fiverr_yolo/src/second_coursework/launch/: itr_AI_cw2425.launch
main_folder/fiverr_yolo/src/second_coursework/scripts/: main_node.py
